tests/baselines/reference/awaitAwait.errors.txt
tests/cases/compiler/awaitAwait.ts(2,11): error TS1109: Expression expected.


==== tests/cases/compiler/awaitAwait.ts (1 errors) ====
    async function f() {
        await await 0;
              ~~~~~
!!! error TS1109: Expression expected.
    }
    